--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <img class="d-block w-100" src="assets/images/120x90cm-prn-1-2000x1500.jpg" alt="Third slide">
                 <div class="carousel-caption d-md-block" style="text-align: right; padding-bottom: 60px">
                     <h1 class="h3font font-weight-bold">型錄製作</h1>
-                    <h5 class="h3font font-weight-bold">新品展示EMD</h5>
+                    <h5 class="h3font font-weight-bold">新品展示EDM</h5>
                 </div>
             </div>
             <div class="carousel-item">
