修改介紹頁

--- a/resume.html
+++ b/resume.html
@@ -102,9 +102,9 @@
 
 <section class="features7 cid-rh6pVFCVjA" id="features7-2o">    
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" style="padding-bottom: 30px">
             <div class="card p-3 col-12 col-md-6">
-                <div class="media" style="padding-bottom: 30px">
+                <div class="media">
                     <div class="card-img pr-2">
                         <span class="mbr-iconfont mbrib-website-theme" style="color: rgb(20, 157, 204); fill: rgb(20, 157, 204);"></span>
                     </div>
