--- a/index.html
+++ b/index.html
@@ -254,15 +254,22 @@
                         <a href="https://github.com/meteor0329" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon"></span>
                         </a>
-                    </div><div class="soc-item">
+                    </div>
+                    <div class="soc-item">
                         <a href="https://line.me/ti/p/U4YYxhgJx5" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-line socicon"></span>
                         </a>
-                    </div><div class="soc-item">
+                    </div>
+                    <div class="soc-item">
+                        <a href="https://www.instagram.com/meteor32975/">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
+                        </a>
+                    </div>
+                    <div class="soc-item">
                         <a href="mailto:meteor32975@gmail.com">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-mail socicon"></span>
                         </a>
-                    </div>
+                    </div>                    
                 </div>
             </div>
             <div class="row row-copirayt">
