修改版權區

--- a/resume.html
+++ b/resume.html
@@ -264,24 +264,31 @@
 </section>
 
 <!-- 版權 -->
-<section once="" class="cid-rgCN2AJJAt" id="footer7-23">
+<section once="" class="cid-rgCN2AJJAt" id="footer7-h">
     <div class="container">
         <div class="media-container-row align-center mbr-white">            
             <div class="row social-row">
-                <div class="social-list align-right pb-2">                   
+                <div class="social-list align-right pb-2">
                 <div class="soc-item">
                         <a href="https://github.com/meteor0329" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-github socicon"></span>
                         </a>
-                    </div><div class="soc-item">
+                    </div>
+                    <div class="soc-item">
                         <a href="https://line.me/ti/p/U4YYxhgJx5" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-line socicon"></span>
                         </a>
-                    </div><div class="soc-item">
+                    </div>
+                    <div class="soc-item">
+                        <a href="https://www.instagram.com/meteor32975/">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
+                        </a>
+                    </div>
+                    <div class="soc-item">
                         <a href="mailto:meteor32975@gmail.com">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-mail socicon"></span>
                         </a>
-                    </div>
+                    </div>                    
                 </div>
             </div>
             <div class="row row-copirayt">
