增加CIS頁面的效果

--- a/cis.html
+++ b/cis.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/wow/css/woo.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css"> 
 </head>
@@ -49,17 +50,18 @@
 </section>
 
 <!-- CIS企業識別系統 -->
+<link href="assets/animate/animate.css" rel="stylesheet">
 <section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="features11 cid-rgOO9SmgHt" id="features11-x">
     <div class="container">   
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure m-auto" style="width: 60%;">
-                    <img src="assets/images/img-1697-1168x876.jpg" alt="劍湖山王子大飯店" title="">
+                    <img src="assets/images/-logo-3-1-492x369.jpg" alt="劍湖山王子大飯店" title="">
                 </div>
                 <div class="align-left aside-content">
-                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2"><strong>劍湖山王子大飯店</strong></h2>
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2"><strong>活動LOGO設計</strong></h2>
                     <div class="mbr-section-text">
-                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">2017年與劍湖山王子大飯店合作案</p>
+                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">運用海盜配件元素與字體結合</p>
                     </div>                    
                 </div>
             </div>
@@ -68,7 +70,7 @@
 </section>
 
 <section class="mbr-section content4 cid-rhp0NWh2h0" id="content4-30">
-    <div class="container">
+    <div class="container wow fadeInUp ch">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-5"><strong>
@@ -79,7 +81,7 @@
 </section>
 
 <section class="features17 cid-rhp08vxhDM" id="features17-2x">    
-    <div class="container-fluid">
+    <div class="container-fluid wow fadeInUp ch">
         <div class="media-container-row">
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
@@ -134,7 +136,7 @@
 </section>
 
 <section class="mbr-section content4 cid-rhp3r9K2Ni" id="content4-34">
-    <div class="container">
+    <div class="container wow fadeInUp ch">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-5"><strong>
@@ -146,7 +148,7 @@
 </section>
 
 <section class="features17 cid-rhp2lPdtMP" id="features17-33">   
-    <div class="container-fluid">
+    <div class="container-fluid wow fadeInUp ch">
         <div class="media-container-row">
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
@@ -221,7 +223,7 @@
 </section>
 
 <section class="mbr-section content4 cid-rhp7mBK9GS" id="content4-36">
-    <div class="container">
+    <div class="container wow fadeInUp ch">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2"><strong>
@@ -236,7 +238,7 @@
 </section>
 
 <section class="features2 cid-rhp6YSzO1p" id="features2-35">    
-    <div class="container">
+    <div class="container wow fadeInUp ch">
         <div class="media-container-row">
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
@@ -262,7 +264,7 @@
 </section>
 
 <section class="mbr-section content4 cid-rhp8or3BVW" id="content4-38">
-    <div class="container">
+    <div class="container wow fadeInUp ch">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2"><strong>
@@ -277,7 +279,7 @@
 </section>
 
 <section class="features2 cid-rhp82gixWX" id="features2-37">    
-    <div class="container">
+    <div class="container wow fadeInUp ch">
         <div class="media-container-row">
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
@@ -303,7 +305,7 @@
 </section>
 
 <section class="mbr-section content4 cid-rhp9o7AJW6" id="content4-3a">
-    <div class="container">
+    <div class="container wow fadeInUp ch">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2"><strong>
@@ -318,7 +320,7 @@
 </section>
 
 <section class="features2 cid-rhp9cpCW61" id="features2-39">   
-    <div class="container">
+    <div class="container wow fadeInUp ch">
         <div class="media-container-row">
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
@@ -388,6 +390,9 @@
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
-   
+  <script src="assets/wow/js/wow.min.js"></script> 
+  <script>
+    new WOW().init();
+</script>
 </body>
 </html>
