修改vision頁面效果

--- a/vision.html
+++ b/vision.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/wow/css/woo.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">  
 </head>
@@ -49,6 +50,7 @@
 </section>
 
 <!-- 視覺統籌規劃 -->
+<link href="assets/animate/animate.css" rel="stylesheet">
 <section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="features11 cid-rgSKlV3Tu8" id="features11-1h">
     <div class="container">   
         <div class="col-md-12">
@@ -133,7 +135,7 @@
 </section>
 
 <section class="features2 cid-rhpaGfm2Uq" id="features2-3b">
-   <div class="container">
+   <div class="container  wow fadeInDown">
         <div class="media-container-row">
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
@@ -165,7 +167,7 @@
 </section>
 
 <section class="features2 cid-rhpaWjd9xu" id="features2-3c">
-   <div class="container">
+   <div class="container wow fadeInDown">
         <div class="media-container-row">
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
@@ -273,7 +275,7 @@
 </section>
 
 <section class="services1 cid-rgUb1CEHoR" id="services1-1z">
-    <div class="container">
+    <div class="container wow fadeIn">
         <div class="row justify-content-center">
             <div class="title pb-5 col-12">
                 <h2 class="align-left pb-3 mbr-fonts-style display-2"><strong>
@@ -320,7 +322,7 @@
 </section>
 
 <section class="services1 cid-rgUwqIwzNm" id="services1-20">
-    <div class="container">
+    <div class="container wow fadeIn">
         <div class="row justify-content-center">
             <div class="title pb-5 col-12">                
             </div>
@@ -372,7 +374,7 @@
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://www.instagram.com/meteor32975/">
+                        <a href="https://www.instagram.com/meteor32975/" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                         </a>
                     </div>
@@ -400,6 +402,9 @@
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script> 
-   
+  <script src="assets/wow/js/wow.min.js"></script> 
+  <script>
+    new WOW().init();
+</script> 
 </body>
 </html>
