--- a/cis.html
+++ b/cis.html
@@ -59,9 +59,9 @@
                     <img src="assets/images/-logo-3-1-492x369.jpg" alt="劍湖山王子大飯店" title="">
                 </div>
                 <div class="align-left aside-content">
-                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2"><strong>活動LOGO設計</strong></h2>
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2"><strong>劍湖山王子大飯店</strong></h2>
                     <div class="mbr-section-text">
-                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">運用海盜配件元素與字體結合</p>
+                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">結合海盜元素所設計的活動LOGO</p>
                     </div>                    
                 </div>
             </div>
