--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 </section>
 
 <!-- 簡介區 -->
-<section class="testimonials3 cid-rgPObwYB5w" id="testimonials3-1g">
+<section class="testimonials3 cid-rgPObwYB5w" id="testimonials3-1g" style="margin-bottom:150px">
     <div class="container">
         <div class="media-container-row">
             <div class="media-content px-3 align-self-center mbr-white py-2">
@@ -237,7 +237,7 @@
                    Mary Chen</p>
             </div>
 
-            <div class="mbr-figure pl-lg-5" style="width: 75%;">
+            <div class="mbr-figure pl-lg-5" style="width: 75%">
               <a href="resume.html"><img src="assets/images/13-868x579.jpg" alt="" title=""></a>
             </div>
         </div>
@@ -245,7 +245,7 @@
 </section>
 
 <!-- 版權 -->
-<section once="" class="cid-rgCN2AJJAt" id="footer7-h">
+<section once="" class="cid-rgCN2AJJAt fixed-bottom" id="footer7-h">
     <div class="container">
         <div class="media-container-row align-center mbr-white">            
             <div class="row social-row">
