固定版權頁

--- a/cis.html
+++ b/cis.html
@@ -319,7 +319,7 @@
     </div>
 </section>
 
-<section class="features2 cid-rhp9cpCW61" id="features2-39">   
+<section class="features2 cid-rhp9cpCW61" id="features2-39" style="margin-bottom: 60px">   
     <div class="container wow fadeInUp ch">
         <div class="media-container-row">
             <div class="card p-3 col-12 col-md-6">
@@ -346,7 +346,7 @@
 </section>
 
 <!-- 版權 -->
-<section once="" class="cid-rgCN2AJJAt" id="footer7-h">
+<section once="" class="cid-rgCN2AJJAt fixed-bottom" id="footer7-h">
     <div class="container">
         <div class="media-container-row align-center mbr-white">            
             <div class="row social-row">
