固定版權頁

--- a/vision.html
+++ b/vision.html
@@ -321,7 +321,7 @@
     </div>
 </section>
 
-<section class="services1 cid-rgUwqIwzNm" id="services1-20">
+<section class="services1 cid-rgUwqIwzNm" id="services1-20" style="margin-bottom:60px">
     <div class="container wow fadeIn">
         <div class="row justify-content-center">
             <div class="title pb-5 col-12">                
@@ -358,7 +358,7 @@
 </section>
 
 <!-- 版權 -->
-<section once="" class="cid-rgCN2AJJAt" id="footer7-h">
+<section once="" class="cid-rgCN2AJJAt fixed-bottom" id="footer7-h">
     <div class="container">
         <div class="media-container-row align-center mbr-white">            
             <div class="row social-row">
