固定版權頁

--- a/product.html
+++ b/product.html
@@ -190,7 +190,7 @@
     </div>          
 </section>
 
-<section class="features11 cid-rgNT07kD3H" id="features11-t">
+<section class="features11 cid-rgNT07kD3H" id="features11-t" style="margin-bottom: 20px">
     <div class="container">   
         <div class="col-md-12">
             <div class="media-container-row">
@@ -212,7 +212,7 @@
 </section>
 
 <!-- 版權 -->
-<section once="" class="cid-rgCN2AJJAt" id="footer7-h">
+<section once="" class="cid-rgCN2AJJAt fixed-bottom" id="footer7-h">
     <div class="container">
         <div class="media-container-row align-center mbr-white">            
             <div class="row social-row">
