--- a/resume.html
+++ b/resume.html
@@ -191,7 +191,7 @@
 </section>
 
 <!-- 專業技能 -->
-<section class="clients cid-rh6ddA1gN0" id="clients-2i">   
+<section class="clients cid-rh6ddA1gN0" id="clients-2i" style="margin-bottom:120px">   
         <div class="container mb-5">
             <div class="media-container-row">
                 <div class="col-12 align-center">
@@ -262,7 +262,7 @@
 </section>
 
 <!-- 版權 -->
-<section once="" class="cid-rgCN2AJJAt" id="footer7-h">
+<section once="" class="cid-rgCN2AJJAt fixed-bottom" id="footer7-h">
     <div class="container">
         <div class="media-container-row align-center mbr-white">            
             <div class="row social-row">
