--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- 輪播區 -->
 <section>
-<div class="container" style="padding:100px 0 20px 0">
+<div class="container w-50" style="padding:90px 0 20px 0">
     <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -106,6 +106,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>       
+        </div>
     </div>
 </section>
 
