--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- 輪播區 -->
 <section>
-<div class="container w-50" style="padding:90px 0 20px 0">
+<div class="container" style="padding:90px 0 20px 0">
     <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
