--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- 輪播區 -->
 <section>
-<div class="container" style="padding:90px 0 20px 0">
+<div class="container" style="padding:80px 0 20px 0">
     <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -62,21 +62,21 @@
         <div class="carousel-inner rounded">
             <div class="carousel-item active">
                 <img class="d-block w-100" src="assets/images/cb-mk201708009-iicakeq4-120x90cm-prn-1-2000x1500.jpg" alt="First slide">
-                <div class="carousel-caption d-md-block" style="text-align: left; padding-bottom: 60px">
+                <div class="carousel-caption d-md-block" style="text-align: left; padding-bottom:150px">
                     <h1 class="h3font font-weight-bold">季節檔期設計</h1>
                     <h5 class="h3font font-weight-bold">巾典午茶時刻</h5>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="assets/images/cb-mk201712001-iicakeq1120x90cm-prn-1-2000x1500.jpg" alt="Second slide">
-                <div class="carousel-caption d-md-block" style="text-align: right; padding-bottom: 60px">
+                <div class="carousel-caption d-md-block" style="text-align: right; padding-bottom:150px">
                     <h1 class="h3font font-weight-bold">拒當單身狗</h1>
                     <h5 class="h3font font-weight-bold">狗年造型毛巾</h5>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="assets/images/120x90cm-prn-1-2000x1500.jpg" alt="Third slide">
-                <div class="carousel-caption d-md-block" style="text-align: right; padding-bottom: 60px">
+                <div class="carousel-caption d-md-block" style="text-align: right; padding-bottom:150px">
                     <h1 class="h3font font-weight-bold">型錄製作</h1>
                     <h5 class="h3font font-weight-bold">新品展示EDM</h5>
                 </div>
@@ -84,7 +84,7 @@
             <div class="carousel-item">
                 <img class="d-block w-100" src="assets/images/-120x80cm-prn-2000x1500.jpg" alt="
                 fourth slide">
-                <div class="carousel-caption d-md-block" style="text-align: left; padding-bottom: 60px">
+                <div class="carousel-caption d-md-block" style="text-align: left; padding-bottom:150px">
                     <h1 class="h3font font-weight-bold">廣告看板設計</h1>
                     <h5 class="h3font font-weight-bold">我是女王</h5>
                 </div>
@@ -92,7 +92,7 @@
             <div class="carousel-item">
                 <img class="d-block w-100" src="assets/images/120x90cm-prn-2000x1500.jpg" alt="
                 fifth slide">
-                <div class="carousel-caption d-md-block" style="text-align: right; padding-bottom: 60px">
+                <div class="carousel-caption d-md-block" style="text-align: right; padding-bottom:150px">
                     <h1 class="h3font font-weight-bold">海底總動員</h1>
                     <h5 class="h3font font-weight-bold">幫尼莫找一個家</h5>
                 </div>
@@ -117,7 +117,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="cis.html"><img src="assets/images/-logo-3-1-492x369.jpg" alt="CIS企業識別系統" title=""></a>
+                        <a href="cis.html"><img src="assets/images/img-1697-1168x876.jpg" alt="CIS企業識別系統" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>
@@ -246,7 +246,7 @@
 </section>
 
 <!-- 版權 -->
-<section once="" class="cid-rgCN2AJJAt fixed-bottom" id="footer7-h">
+<section once="" class="cid-rgCN2AJJAt" id="footer7-h">
     <div class="container">
         <div class="media-container-row align-center mbr-white">            
             <div class="row social-row">
@@ -294,6 +294,6 @@
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/slidervideo/script.js"></script>
-    
+   
 </body>
 </html>
