--- a/product.html
+++ b/product.html
@@ -212,7 +212,7 @@
 </section>
 
 <!-- 版權 -->
-<section once="" class="cid-rgCN2AJJAt fixed-bottom" id="footer7-h">
+<section once="" class="cid-rgCN2AJJAt" id="footer7-h">
     <div class="container">
         <div class="media-container-row align-center mbr-white">            
             <div class="row social-row">
