--- a/cis.html
+++ b/cis.html
@@ -367,6 +367,11 @@
                         </a>
                     </div>
                     <div class="soc-item">
+                        <a href="https://issuu.com/meteor0329/docs/shu_chia_chen_portfolio_issuu" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-issuu socicon"></span>
+                        </a>
+                    </div>                    
+                    <div class="soc-item">
                         <a href="mailto:meteor32975@gmail.com">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-mail socicon"></span>
                         </a>
