修改形象官網連結

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="http://220.128.133.15/s1070313/" target="_blank"><img src="assets/images/chrome-2019-01-31-22-27-58-492x369.jpg" alt="形象官網設計" title=""></a>
+                        <a href="web.html"><img src="assets/images/chrome-2019-01-31-22-27-58-492x369.jpg" alt="形象官網設計" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
