--- a/resume.html
+++ b/resume.html
@@ -198,7 +198,7 @@
                     <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2"><strong>
                         專業技能</strong></h2>
                     <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style display-5">
-                        Illustrator、Photoshop、InDesign、Dreamweaver、CorelDRAW</h3>
+                        Illustrator、Photoshop、InDesign、Dreamweaver、VSCode、CorelDRAW</h3>
                 </div>
             </div>
         </div>
@@ -214,7 +214,8 @@
                             </div>
                         </div>
                     </div>
-                </div><div class="carousel-item ">
+                </div>
+                <div class="carousel-item ">
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
@@ -222,7 +223,8 @@
                             </div>
                         </div>
                     </div>
-                </div><div class="carousel-item ">
+                </div>
+                <div class="carousel-item ">
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
@@ -230,7 +232,8 @@
                             </div>
                         </div>
                     </div>
-                </div><div class="carousel-item ">
+                </div>
+                <div class="carousel-item ">
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
@@ -238,7 +241,17 @@
                             </div>
                         </div>
                     </div>
-                </div><div class="carousel-item ">
+                </div>
+                <div class="carousel-item ">
+                    <div class="media-container-row">
+                        <div class="col-md-12">
+                            <div class="wrap-img ">
+                                <img src="assets/images/vs-1-177x177.png" class="img-responsive clients-img" alt="" title="">
+                            </div>
+                        </div>
+                    </div>
+                </div>                
+                <div class="carousel-item ">
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
@@ -246,7 +259,8 @@
                             </div>
                         </div>
                     </div>
-                </div></div>
+                </div>
+            </div>
             <div class="carousel-controls">
                 <a data-app-prevent-settings="" class="carousel-control carousel-control-prev" role="button" data-slide="prev">
                     <span aria-hidden="true" class="mbri-left mbr-iconfont"></span>
