--- a/product.html
+++ b/product.html
@@ -56,7 +56,7 @@
                 <div class="mbr-figure m-auto" style="width: 50%;">
                     <img src="assets/images/ckc450fc4-952x632.jpg" alt="精典泰迪方型蛋糕毛巾" title="">
                 </div>
-                <div class=" align-left aside-content">
+                <div class="align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2"><strong>&nbsp;精典泰迪方型蛋糕毛巾</strong></h2>
                     <div class="mbr-section-text">                        
                     </div>
@@ -209,6 +209,68 @@
             </div>
         </div> 
     </div>          
+</section>
+
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="features11 cid-rgSKlV3Tu8" id="features11-1h">
+    <div class="container">   
+        <div class="col-md-12">
+            <div class="media-container-row">
+                <div class="mbr-figure m-auto" style="width: 60%;">
+                    <img src="assets/images/-2-500x37555.jpg" alt="iicake週年慶" title="">
+                </div>
+                <div class=" align-left aside-content">
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-2"><strong>福建钟表博物馆</strong></h2>
+                    <div class="mbr-section-text">
+                        <p class="mbr-text mb-5 pt-3 mbr-light mbr-fonts-style display-5">iicake企劃團隊包裝設計<br><br></p>
+                    </div>
+                </div>
+            </div>
+        </div> 
+    </div>          
+</section>
+
+<section class="features17 cid-rgTwxoMZGf" id="features17-1u">   
+    <div class="container-fluid">
+        <div class="media-container-row">
+            <div class="card p-3 col-12 col-md-6 my-col">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/-3-500x375-postcard.jpg" alt="沙漏明信片" title="">
+                    </div>
+                    <div class="card-box" style="background-color: #C0D49B">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>
+                            沙漏明信片(手打樣提案)</strong></h4>                        
+                    </div>
+                </div>
+            </div>
+
+            <div class="card p-3 col-12 col-md-6 my-col">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/-3-500x375-cookie.jpg" alt="風吹餅" title="">
+                    </div>
+                    <div class="card-box" style="background-color: #C0D49B">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>
+                            風吹餅(手打樣提案)</strong></h4>                        
+                    </div>
+                </div>
+            </div>
+
+            <div class="card p-3 col-12 col-md-6 my-col" style="margin-bottom:50px">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/-3-500x375-sticke.jpg" alt="牛逼棒" title="">
+                    </div>
+                    <div class="card-box" style="background-color: #C0D49B">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>牛逼棒(手打樣提案)</strong></h4>                        
+                    </div>
+                </div>
+            </div>
+
+
+           
+        </div>
+    </div>
 </section>
 
 <!-- 版權 -->
