--- a/vision.html
+++ b/vision.html
@@ -353,6 +353,60 @@
                    </div>
                 </div>
             </div>
+            <div class="card col-12 col-md-6 col-lg-4 last-child">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/1119index.gif" alt="" title="">
+                    </div>
+                    <div class="card-box">                        
+                   </div>
+                </div>
+            </div>
+            <div class="card col-12 col-md-6 col-lg-4 last-child">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/1203-index-way.gif" alt="" title="">
+                    </div>
+                    <div class="card-box">                        
+                   </div>
+                </div>
+            </div>
+            <div class="card col-12 col-md-6 col-lg-4 last-child">
+                <div class="card-wrapper" style="margin-bottom:50px">
+                    <div class="card-img">
+                        <img src="assets/images/1122index.gif" alt="" title="">
+                    </div>
+                    <div class="card-box">                        
+                   </div>
+                </div>                                              
+            </div>
+            <div class="card col-12 col-md-6 col-lg-4 last-child">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/1231-index.gif" alt="" title="">
+                    </div>
+                    <div class="card-box">                        
+                   </div>
+                </div>
+            </div>
+            <div class="card col-12 col-md-6 col-lg-4 last-child">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/1106-2-index.gif" alt="" title="">
+                    </div>
+                    <div class="card-box">                        
+                   </div>
+                </div>
+            </div>                          
+            <div class="card col-12 col-md-6 col-lg-4 last-child">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/1108-index.gif" alt="" title="">
+                    </div>
+                    <div class="card-box">                        
+                   </div>
+                </div>
+            </div>                                                 
         </div>
     </div>
 </section>
