增加展示設計

--- a/vision.html
+++ b/vision.html
@@ -274,13 +274,104 @@
     </div>
 </section>
 
+<section class="header1 cid-rgU9oOjBai" id="header16-1x">
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-md-10 align-center">
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">展示設計</h1>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="features2 cid-rhpaWjd9xu" id="features2-3c">
+    <div class="container wow fadeInDown">
+         <div class="media-container-row">
+             <div class="card p-3 col-12 col-md-6">
+                 <div class="card-wrapper">
+                     <div class="card-img">
+                         <img src="assets/images/car-view.jpg" alt="展示櫃佈置" title="">
+                     </div>
+                     <div class="card-box">
+                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
+                             展示櫃佈置
+                         </h4>                        
+                     </div>
+                 </div>
+             </div>
+ 
+             <div class="card p-3 col-12 col-md-6">
+                 <div class="card-wrapper">
+                     <div class="card-img">
+                         <img src="assets/images/IMG_4329.jpg" alt="櫥窗佈置" title="">
+                     </div>
+                     <div class="card-box ">
+                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
+                             櫥窗佈置
+                         </h4>                        
+                     </div>
+                 </div>
+             </div>           
+         </div>
+     </div>
+ </section>
+
+ <section class="features2 cid-rhpaWjd9xu" id="features2-3c">
+    <div class="container wow fadeInDown">
+         <div class="media-container-row">
+             <div class="card p-3 col-12 col-md-4">
+                 <div class="card-wrapper">
+                     <div class="card-img">
+                         <img src="assets/images/iicake-2birthday.jpg" alt="展示櫃佈置" title="">
+                     </div>
+                     <div class="card-box">
+                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
+                             展示櫃佈置
+                         </h4>                        
+                     </div>
+                 </div>
+             </div> 
+             <div class="card p-3 col-12 col-md-4">
+                 <div class="card-wrapper">
+                     <div class="card-img">
+                         <img src="assets/images/rooster.jpg" alt="活動櫃造型看板" title="">
+                     </div>
+                     <div class="card-box ">
+                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
+                             活動櫃造型看板
+                         </h4>                        
+                     </div>
+                 </div>
+             </div>
+             <div class="card p-3 col-12 col-md-4">
+                <div class="card-wrapper">
+                    <div class="card-img">
+                        <img src="assets/images/poster.jpg" alt="明信片投遞箱" title="">
+                    </div>
+                    <div class="card-box ">
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">
+                            明信片投遞箱
+                        </h4>                        
+                    </div>
+                </div>
+            </div>                          
+         </div>
+     </div>
+ </section> 
+
+ <section class="header1 cid-rgU9oOjBai" id="header16-1x">
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-md-10 align-center">
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">Banner設計</h1>
+            </div>
+        </div>
+    </div>
+</section>
+ 
 <section class="services1 cid-rgUb1CEHoR" id="services1-1z">
     <div class="container wow fadeIn">
         <div class="row justify-content-center">
-            <div class="title pb-5 col-12">
-                <h2 class="align-left pb-3 mbr-fonts-style display-2"><strong>
-                    Banner設計</strong></h2>                
-            </div>
             <div class="card col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
