--- a/cis.html
+++ b/cis.html
@@ -229,7 +229,7 @@
                     三國人物設計
                 </strong></h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
-                    以三國人物：關羽、諸葛亮、張飛，依照角色闖關遊戲卡。
+                    以三國人物：關羽、諸葛亮、張飛，依照角色設計闖關遊戲卡。
                 </h3>                               
             </div>
         </div>
